# embedRAG

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
config/: query_node.yaml.example  writer_node.yaml.example
docs/: api.md  clustering.md  configuration.md  design-clustering.md  embedding.md  index.md  integration.md  multi-modal.md  operations.md
examples/causal_inference/: ingest.py  query.yaml  writer.yaml
examples/classics/: README.md  hot_swap_demo.sh  ingest.py  query.yaml  writer.yaml
examples/classics_qwen/: README.md  ingest.py  query.yaml  writer.yaml
examples/clustering/: README.md  complaints.jsonl
examples/hongloumeng/: README.md  ingest.py  query.yaml  writer.yaml
examples/lunyu_quotes/: README.md  ingest.py  query.yaml  writer.yaml
examples/lunyu_quotes/clustering/: .gitignore  README.md  export_vectors.py  install_run.py
examples/quantangshi/: README.md  download_poems.py  ingest.py  query.yaml  writer.yaml
src/embedrag/: __init__.py  cli.py  config.py  logging_setup.py
src/embedrag/cluster/: __init__.py  algorithms.py  evaluate.py  explain.py  label.py  pipeline.py  preprocess.py  report.py  source.py  store.py  types.py  visualize.py
src/embedrag/clusterui/: cluster.css  cluster.js  index.html
src/embedrag/models/: __init__.py  api.py  chunk.py  manifest.py
src/embedrag/query/: app.py  middleware.py  routes.py  storage.py
src/embedrag/query/index/: generation.py  hotfix.py  id_mapping.py  shard.py
src/embedrag/query/lifecycle/: bootstrap.py  readiness.py  shutdown.py  startup.py
src/embedrag/query/retrieval/: dense.py  fusion.py  hierarchy_expand.py  sparse.py
src/embedrag/query/sync/: downloader.py  syncer.py
src/embedrag/shared/: archive.py  checksum.py  compression.py  disk.py  http_snapshot_client.py  metrics.py  object_store.py  snapshot_client.py
src/embedrag/text/: normalize.py  t2s_chars.json
src/embedrag/webui/: app.js  index.html  style.css
src/embedrag/writer/: app.py  embedding_client.py  index_builder.py  routes.py  schema.py  snapshot.py  storage.py
src/embedrag/writer/chunking/: hierarchy.py  splitter.py
tests/: conftest.py
tests/unit/: test_chunker.py  test_cluster.py  test_config.py  test_debug_models.py  test_dense_retriever.py  test_embedding_client.py  test_fusion.py  test_generation.py  test_hierarchy.py  test_hotfix_models.py  test_index_builder.py  test_manifest.py  test_multilingual.py  test_snapshot_packager.py  test_sync.py
